# katenginisms

./: .gitignore  CMakeLists.txt  katengine_header_fixer.py
katengine/: CMakeLists.txt
katengine/kat/: Application.cpp  Application.h  Window.cpp  Window.h  colors.h  core.cpp  core.h  geometry.h  katengine.cpp  katengine.h  katengine_header_fixer.state.json  utils.h
katengine/kat/animation/imperative/: ImperativeAnimation.cpp  ImperativeAnimation.h
katengine/kat/animation/keyframe/: KeyframeAnimation.cpp  KeyframeAnimation.h
katengine/kat/asset/: AssetLoaderRegistry.cpp  AssetLoaderRegistry.h  AssetManager.h  BaseAsset.cpp  BaseAsset.h  TextFileAsset.cpp  TextFileAsset.h
katengine/kat/camera/: ArcBallCamera.cpp  ArcBallCamera.h  Camera.h  FrustumCamera.cpp  FrustumCamera.h  OrthographicCamera.h  PerspectiveCamera.h
katengine/kat/compute/: DispatchIndirectBuffer.cpp  DispatchIndirectBuffer.h
katengine/kat/renderer/: DrawIndirectBuffer.cpp  DrawIndirectBuffer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h
katengine/kat/tilemap/: BaseTileMapLayer.cpp  BaseTileMapLayer.h  TileMap.h  TileMapGroupLayer.cpp  TileMapGroupLayer.h  TileMapImageLayer.cpp  TileMapImageLayer.h  TileMapObjectLayer.cpp  TileMapObjectLayer.h  TileMapTileLayer.cpp  TileMapTileLayer.h
katengine/kat/utils/: CopyReadBuffer.cpp  CopyReadBuffer.h  CopyWriteBuffer.cpp  CopyWriteBuffer.h  QueryBuffer.cpp  QueryBuffer.h  SimpleRegistry.cpp  SimpleRegistry.h  TransformFeedbackBuffer.cpp  TransformFeedbackBuffer.h
testapp/: CMakeLists.txt  main.cpp  main.h
(+184 files in other folders)
